# nand2tetris

./: README.md
07-vmtranslator/: README.md
07-vmtranslator/tests/: pushpop_test.vm
07-vmtranslator/vmtranslator/: codewriter.py
08-vmtranslator/vmtranslator/: main.py
09-jack/jack_examples/anagrams/: Main.vm  Main.xml  NotAHashMap.jack  StringProcessing.jack  WordList.jack  WordList.vm
09-jack/neural_jack/: Main.jack
10-and-11-compiler/: README.md  t.xml
10-and-11-compiler/jack_compiler/: jack_analyzer.py  lexicon.py  main.py
10-and-11-compiler/jack_compiler/compilation/: base.py  symbol_table.py  vm_compilation.py  vm_writing.py  xml_compilation.py
10-and-11-compiler/tests/compliation/: test_xml_compilation.py
10-compiler/: README.md  pyproject.toml
10-compiler/jack_compiler/: compilation_engine.py  jack_analyzer.py  jack_tokenizer.py  lexicon.py  tokenizer.py  tokens.py
10-compiler/jack_compiler/compilation/: __init__.py  base.py  xml_compilation.py
10-compiler/tests/: test_jack_tokenizer.py
10-compiler/tests/compliation/: test_xml_compilation.py
12-operating-system/: README.md  pyproject.toml
12-operating-system/jack_os/: Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
7-vmtranslator/: README.md  here.asm  pyproject.toml
7-vmtranslator/tests/: test_vmparser.py
7-vmtranslator/vmtranslator/: codewriter.py  hack.py  main.py  vm.py  vmparser.py  vmtranslator.py
8-vmtranslator/: README.md  pyproject.toml
8-vmtranslator/vmtranslator/: codewriter.py  hack.py  main.py  vmparser.py
9-jack/jack_examples/anagrams/: Main.jack  Main.vm  NotAHashMap.vm  StringProcessing.jack  StringProcessing.vm
9-jack/jack_examples/average/: Main.jack
9-jack/neural_jack/average/: Main.jack  Main.vm
