[tool.poetry]
name = "jack-compiler"
version = "0.1.0"
description = "Compile (high-level) Jack code into VM code"
authors = ["Wian Stipp <stippwian@gmail.com>"]
readme = "README.md"
packages = [{include = "jack_compiler"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
