[tool.poetry]
name = "vmtranslator"
version = "0.1.0"
description = ""
authors = ["Wian Stipp <stippwian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
