[tool.poetry]
name = "vmtranslator"
version = "1.0.0"
description = "Translates from VM code to low-level Jack ASM code."
authors = ["Wian Stipp <stippwian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
